--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms</id>
-        <version>1.2.0</version>
+        <version>1.2.1</version>
         <title>Acr.XamForms</title>
         <description>View model lifecycle, view model/view resolution, utility converters, and more</description>
         <authors>Allan Ritchie</authors>
@@ -15,6 +15,9 @@
             <dependency id="Xamarin.Forms" version="[1.2.2.6243, 2.0)" />
         </dependencies>
         <releaseNotes>
+1.3
+New validation property and form view model
+
 1.2
 Bugfixes and some new converters
 
