Starting controls library

--- a/Acr.XamForms.Controls/Acr.XamForms.Controls.csproj
+++ b/Acr.XamForms.Controls/Acr.XamForms.Controls.csproj
@@ -40,6 +40,8 @@
     </Compile>
     <Compile Include="ExtendedEntryCell.cs" />
     <Compile Include="LinearListView.cs" />
+    <Compile Include="ListView.cs" />
+    <Compile Include="Picker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
