--- a/Samples/Samples.iOS/Samples.iOS.csproj
+++ b/Samples/Samples.iOS/Samples.iOS.csproj
@@ -118,6 +118,14 @@
       <Project>{1ED7E825-98ED-4740-8DD7-96E4AA3F1128}</Project>
       <Name>Acr.XamForms.BarCodeScanner</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Acr.XamForms.Controls.iOS\Acr.XamForms.Controls.iOS.csproj">
+      <Project>{98e51b02-cac1-4b18-8fcb-41feef35d2f3}</Project>
+      <Name>Acr.XamForms.Controls.iOS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Acr.XamForms.Controls\Acr.XamForms.Controls.csproj">
+      <Project>{35fddc55-cc73-4aee-bdd5-710a03404613}</Project>
+      <Name>Acr.XamForms.Controls</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Acr.XamForms.Mobile.iOS\Acr.XamForms.Mobile.iOS.csproj">
       <Project>{A2908B9C-D5D0-4715-851D-3EB81AB2E452}</Project>
       <Name>Acr.XamForms.Mobile.iOS</Name>
