--- a/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
+++ b/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
@@ -57,6 +57,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ExtendedEntryCellRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
