--- a/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
+++ b/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
@@ -87,6 +87,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ExtendedEntryCellRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -103,9 +104,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Toolkit.Content\ApplicationBar.Add.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="README_FIRST.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
