--- a/Acr.XamForms.Controls.iOS/Acr.XamForms.Controls.iOS.csproj
+++ b/Acr.XamForms.Controls.iOS/Acr.XamForms.Controls.iOS.csproj
@@ -38,6 +38,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="ExtendedEntryCellRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
