--- a/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
+++ b/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
@@ -58,6 +58,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ExtendedEntryCellRenderer.cs" />
+    <Compile Include="ExtendedTextCellRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
