--- a/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
+++ b/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
@@ -88,6 +88,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ExtendedEntryCellRenderer.cs" />
+    <Compile Include="ExtendedTextCellRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
