Still working on hiding cells

--- a/Acr.XamForms.Controls/Acr.XamForms.Controls.csproj
+++ b/Acr.XamForms.Controls/Acr.XamForms.Controls.csproj
@@ -38,8 +38,9 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ExtendedEntryCell.cs" />
-    <Compile Include="ExtendedTextCell.cs" />
+    <Compile Include="EntryCell.cs" />
+    <Compile Include="TableView.cs" />
+    <Compile Include="TextCell.cs" />
     <Compile Include="LinearListView.cs" />
     <Compile Include="ListView.cs" />
     <Compile Include="Picker.cs" />
