--- a/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
+++ b/Acr.XamForms.Controls.Android/Acr.XamForms.Controls.Android.csproj
@@ -57,8 +57,8 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ExtendedEntryCellRenderer.cs" />
-    <Compile Include="ExtendedTextCellRenderer.cs" />
+    <Compile Include="EntryCellRenderer.cs" />
+    <Compile Include="TextCellRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
