--- a/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
+++ b/Acr.XamForms.Controls.WindowsPhone/Acr.XamForms.Controls.WindowsPhone.csproj
@@ -87,8 +87,8 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ExtendedEntryCellRenderer.cs" />
-    <Compile Include="ExtendedTextCellRenderer.cs" />
+    <Compile Include="EntryCellRenderer.cs" />
+    <Compile Include="TextCellRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
