FIX: iOS settings issue FIX: scrolling issue on WP8 Lots of work on validation stuff

--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -16,6 +16,9 @@
             <dependency id="Newtonsoft.Json" version="[6.0.4, 7)" />
         </dependencies>
         <releaseNotes>
+1.4.1
+FIX: settings issue with iOS
+
 1.4
 FIX: Network detection exception with android wifi only
 FIX: Camera context on android
