--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.UserDialogs</id>
-        <version>2.0.1</version>
+        <version>2.0.2</version>
         <title>User Dialogs for Xamarin Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
@@ -21,6 +21,10 @@
             </group>
         </dependencies>
         <releaseNotes>
+2.0.2
+Fix null reference with action sheet and back button on WP8
+Fix scrolling issue with action sheet in WP8
+
 2.0.1
 Updating to latest stable Xamarin.Forms release 
 
