--- a/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
+++ b/Acr.XamForms.Mobile.Droid/Acr.XamForms.Mobile.Droid.csproj
@@ -22,7 +22,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin\Debug\MonoAndroid\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;__ANDROID__</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
