Ready iOS8 Updates

--- a/Acr.XamForms.SignaturePad.WindowsPhone/Acr.XamForms.SignaturePad.WindowsPhone.csproj
+++ b/Acr.XamForms.SignaturePad.WindowsPhone/Acr.XamForms.SignaturePad.WindowsPhone.csproj
@@ -93,6 +93,9 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignaturePad.xaml.cs">
+      <DependentUpon>SignaturePad.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SignaturePadRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +122,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="SignaturePad.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
