--- a/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
+++ b/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
@@ -41,6 +41,8 @@
     <Compile Include="ActionSheetConfig.cs" />
     <Compile Include="AlertConfig.cs" />
     <Compile Include="ConfirmConfig.cs" />
+    <Compile Include="LoginConfig.cs" />
+    <Compile Include="LoginResult.cs" />
     <Compile Include="TODO\DateTimePromptConfig.cs" />
     <Compile Include="TODO\DateTimePromptResult.cs" />
     <Compile Include="TODO\DurationPromptConfig.cs" />
