--- a/Samples/Samples.iOS/Info.plist
+++ b/Samples/Samples.iOS/Info.plist
@@ -25,9 +25,9 @@
 	<key>CFBundleDisplayName</key>
 	<string>ACR Xamarin Forms Samples</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.acr.samples</string>
+	<string>com.acrapps.mvvm</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.0.0</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>NSMainNibFile</key>
