--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.BarCodeScanner</id>
-        <version>1.1.3</version>
+        <version>1.1.4</version>
         <title>BarCode Scanner for Xamarin Forms</title>
         <description>Barcode scanning for Xamarin Forms built on ZXing.Net.Mobile for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -29,6 +29,9 @@
             </group>
         </dependencies>
         <releaseNotes>
+1.1.4
+Update to Xamarin Forms 1.2.3
+
 1.1.3
 Update Xamarin.Forms reference to deal with ReflectionOnlyAssemblyResolve
 
