--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms.SignaturePad</id>
-        <version>1.1.0</version>
+        <version>1.1.1</version>
         <title>Signature Pad for Xamarin.Forms</title>
         <description>Signature Pad view renderer and service dialog for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -15,8 +15,11 @@
             <dependency id="Xamarin.Forms" version="[1.2.3.6257, 2.0)" />
         </dependencies>
         <releaseNotes>
+1.1.1
+Update to Xamarin Forms 1.2.3
+
 1.1
-Update to the latest signature pad 
+Update to the latest signature pad
 Fix background color on android
 
 1.0.1
@@ -34,17 +37,11 @@ Initial Release
         <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoAndroid\Acr.XamForms.SignaturePad.dll" />
         <file src="..\bin\Release\MonoAndroid\Acr.XamForms.SignaturePad.Droid.dll" target="lib\MonoAndroid\Acr.XamForms.SignaturePad.Droid.dll" />
         <file src="..\bin\Release\MonoAndroid\SignaturePad.Android.dll" target="lib\MonoAndroid\SignaturePad.Android.dll" />
-        
+
         <!-- touch -->
         <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.dll" />
         <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" />
         <file src="..\bin\Release\MonoTouch\SignaturePad.iOS.dll" target="lib\MonoTouch\SignaturePad.iOS.dll" />
         <file src="Bootstrap\SignaturePadBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\SignaturePadBootstrap.cs.pp" />
-        
-        <!--winphone-->
-        <!--TODO: manually build winphone library-->
-        <!--<file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\wp8\Acr.XamForms.SignaturePad.dll" />
-        <file src="..\bin\Release\WinPhone\Acr.XamForms.SignaturePad.WindowsPhone.dll" target="lib\wp8\Acr.XamForms.SignaturePad.WindowsPhone.dll" />
-        <file src="..\bin\Release\WinPhone\SignaturePad.WinPhone.dll" target="lib\WinPhone\SignaturePad.WinPhone.dll" />-->
     </files>
 </package>
